# cocos-engine-external

./: .gitmodules  CMakeLists.txt
android/: CMakeLists.txt
sources/: CMakeLists.txt
sources/ConvertUTF/: CMakeLists.txt
sources/bullet/: CMakeLists.txt
sources/chipmunk/: CMakeLists.txt
sources/clipper/: CMakeLists.txt
sources/edtaa3func/: CMakeLists.txt
sources/md5/: CMakeLists.txt
sources/poly2tri/: CMakeLists.txt
sources/pvmp3dec/: CMakeLists.txt
sources/pvmp3dec/src/: pvmp3_dec_defs.h
sources/rapidxml/: CMakeLists.txt
sources/recast/: CMakeLists.txt
sources/tinyxml2/: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h
sources/tremolo/: CMakeLists.txt
sources/unzip/: CMakeLists.txt  ioapi_mem.cpp  unzip.cpp  unzip.h
sources/xxhash/: CMakeLists.txt  xxhash.h
win32/: CMakeLists.txt
win32/include/uv/: uv-win.h
win32/include/websockets/: libwebsockets.h
win64/: CMakeLists.txt
